--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,13 @@
   "devDependencies": {
     "dotenv-cli": "^7.0.0",
     "nodemon": "^2.0.21"
+  },
+  "scripts": {
+    "sequelize": "sequelize",
+    "sequelize-cli": "sequelize-cli",
+    "start": "per-env",
+    "start:development": "nodemon ./bin/www",
+    "start:production": "node ./bin/www",
+    "build": "node psql-setup-script.js"
   }
 }
